ui: fix catalog preview overflow

--- a/frontend/src/shared/ui/FemaleCatalogPreview/index.module.css
+++ b/frontend/src/shared/ui/FemaleCatalogPreview/index.module.css
@@ -130,6 +130,7 @@
     height: fit-content;
     position: inherit;
     padding: 0 12px;
+    overflow: visible;
   }
 
   .h1 {
